[package]
name = "wallpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
colored = "2.0.4"
magic = "0.13.0"
opencv = "0.84.5"
rand = "0.8.5"
shellexpand = "3.1.0"

[profile.dev]
opt-level = 1 
