[package]
name = "wallpp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
colored = "2.1.0"
magic-sys = "0.3.0"
magic = "0.16.2"
opencv = {version = "0.89"}
rand = "0.8.5"
shellexpand = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
vcpkg = "0.2.15"

[profile.dev]
opt-level = 1

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"
dependencies = ["libmagic:x64-windows-static"]
